...
    WorldCity(
      name: 'Sidney',
      offsetMinutes: 600,
      timeZoneId: 'Australia/Sydney',
    ),
    WorldCity(
      name: 'New York',
      offsetMinutes: -300,
      timeZoneId: 'America/New_York',
    ),
    WorldCity(
      name: 'Chicago',
      offsetMinutes: -360,
...
